# rust_axum_learn

./: .gitignore  Cargo.toml  README.md  config.toml
actix_web/: Cargo.toml
app/src/: lib.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
echo/: Cargo.toml
echo/src/: executor.rs  main.rs  reactor.rs  tcp_listener.rs  util.rs
linkcrawler/: Cargo.toml
linkcrawler/src/: lib.rs
mactix/: .env  Cargo.toml  config.toml  log4rs.yaml
mactix/.sqlx/: query-a8e2a706ae45425c33ab5635e11e45f486039faf40dbccb80af49d8cf835c016.json
mactix/src/: lib.rs  main.rs
mactix/src/common/: error.rs  mod.rs  response.rs
mactix/src/config/: mod.rs  settings.rs
mactix/src/model/: user.rs
mactix/src/pojo/: data.rs  mod.rs
mactix/src/repository/: dingtalk.rs  mod.rs
mactix/src/router/: mod.rs  routers.rs
mactix/tests/: custom_hastable.rs  import_mod_test.rs  import_mod_test1.rs  mut_self_test.rs
mframe/: Cargo.toml
mframe/src/: error.rs  main.rs  prelude.rs
mfutures/: Cargo.toml
mfutures/src/: main.rs
mmacro/: Cargo.toml
mmacro/examples/: command.rs  command_with_attr.rs  query.rs  rule.rs  x.rs
mmacro/src/: builder.rs  lib.rs
mmacro_test/: Cargo.toml
mmacro_test/src/: main.rs
server/src/: lib.rs
server/tests/: import_crate_test.rs
src/: main.rs
src/configs/: setting.rs
src/model/: mod.rs  response.rs
src/router/: auth.rs  mod.rs
web/: Cargo.toml  config.toml
web/src/: lib.rs  main.rs
web/tests/: async_test.rs  borrow_checker.rs  closure_test.rs  common_trait_test.rs  (+16 more)
xbook/: Zero To Production In Rust CN - Luca Palmieri.epub
(+6 files in other folders)
