[package]
name = "mactix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
actix-http = "3.7.0"
actix-rt = "2.9.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
    "runtime-async-std",
    "mysql",
    "macros",
    "chrono",
] }
config = "0.14.0"
chrono = { version = "0.4.23", features = ["serde"] }
